# plasm-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  justfile
crates/plasm-agent/: Cargo.toml  README.md
crates/plasm-agent-core/: Cargo.toml  README.md  build.rs
crates/plasm-agent-core/migrations/: 20260216120000_project_mcp.sql  20260510140000_plasm_catalog_discovery_embeddings.sql  20260511120000_plasm_catalog_discovery_embeddings_bytea.sql  20260512130000_oauth_provider_apps.sql  20260601000000_plasm_agent_schema.sql
crates/plasm-agent-core/src/: appliance_services.rs  auth_framework_host.rs  auth_framework_postgres_schema.rs  backend_normalize.rs  batch_scheduler.rs  bootstrap_secrets.rs  catalog_ownership.rs  catalog_pin.rs  catalog_runtime.rs  cli_builder.rs  code_mode.rs  code_mode_plan.rs  control_plane_http.rs  discovery_embedding_chunks.rs  discovery_embedding_reconcile.rs  discovery_embedding_repository.rs  discovery_human_format.rs  dispatch.rs  dotenv_safe.rs  error.rs  execute_path_ids.rs  execute_session.rs  execute_staging.rs  expr_display.rs  http.rs  http_discovery.rs  http_execute.rs  http_incoming_context.rs  http_oauth_link.rs  http_problem_util.rs  http_traces.rs  incoming_auth.rs  incoming_auth_device.rs  input_field_cli.rs  invoke_args.rs  lib.rs  listen_endpoint.rs  local_trace_archive.rs  mcp_api_key_registry.rs  mcp_config_admin.rs  (+48 more)
crates/plasm-agent-core/tests/: code_mode_kitchen_sink_e2e.rs  discovery_embedding_pg.rs  http_terminal_protocol.rs  incoming_auth_device_http.rs  mcp_config_admin.rs
crates/plasm-agent/src/: embedded_postgres.rs  lib.rs  mcp_main.rs
crates/plasm-agent/tests/: api_capability_templates.rs  lock_contention_bench.rs  mcp_inbound_oauth_integration.rs  outbound_oauth_refresh.rs  plasm_cgs_remote_help.rs  pokeapi_compile_plugin_e2e.rs
crates/plasm-cli/: Cargo.toml  README.md
crates/plasm-cli/src/: main.rs
crates/plasm-cml/: Cargo.toml  README.md
crates/plasm-cml/src/: cml.rs  error.rs  evm_transport.rs  gmail_send_body.rs  lib.rs  transport.rs
crates/plasm-compile/: Cargo.toml  README.md
crates/plasm-compile/src/: backend_filter.rs  decoder.rs  error.rs  json_path.rs  lib.rs  predicate_compiler.rs
crates/plasm-core/: Cargo.toml  README.md
crates/plasm-core/benches/: schema_load.rs
crates/plasm-core/examples/: o200k_count.rs
crates/plasm-core/src/: cgs_context.rs  cgs_expression_validate.rs  cgs_federation.rs  connect_profile.rs  cross_entity.rs  discovery.rs  domain_lexicon.rs  domain_term.rs  entity_ref_value.rs  error.rs  error_render.rs  expr.rs  expr_sugar.rs  identifiers.rs  identity.rs  lib.rs  loader.rs  normalizer.rs  o200k_token_count.rs  paging_handle.rs  predicate.rs  preflight.rs  prompt_pipeline.rs  prompt_render.rs  query_resolve.rs  resolved_identity.rs  result_gloss.rs  row_composition.rs  schema.rs  schema_overlay.rs  scope_entity_ref_splat.rs  spans.rs  step_semantics.rs  string_unescape.rs  summary_render.rs  symbol_tuning.rs  template_interpolate.rs  template_ref.rs  temporal.rs  tests.rs  (+6 more)
crates/plasm-discovery/: Cargo.toml  README.md
crates/plasm-discovery/benches/: index_build.rs
crates/plasm-discovery/src/: decompose.rs  embedder.rs  embedding_store.rs  engine.rs  index.rs  index_cache.rs  lib.rs  metrics.rs  types.rs
crates/plasm-discovery/tests/: catalog_decomposition_eval.rs  pokeapi_typed_discovery.rs
crates/plasm-e2e/: Cargo.toml  README.md
crates/plasm-e2e/examples/: evm_demo.rs
crates/plasm-e2e/src/: evm_support.rs  lib.rs
crates/plasm-e2e/tests/: evm_auth_e2e.rs  evm_e2e.rs  graphqlzero_live.rs  graphqlzero_smoke.rs  hermit_e2e.rs  linear_live.rs  linear_smoke.rs  plasm_language_matrix.rs  plasm_language_matrix_views.rs  tavily_smoke.rs
crates/plasm-eval/: Cargo.toml  README.md
crates/plasm-eval/src/: baml_client.rs  correction.rs  coverage.rs  dotenv_safe.rs  lib.rs  main.rs
crates/plasm-facade-gen/: Cargo.toml
crates/plasm-facade-gen/src/: delta.rs  gen.rs  lib.rs  quickjs_bootstrap.rs  snapshot_tests.rs
crates/plasm-facade-gen/tests/: ts_facade_snapshots.rs
crates/plasm-mock/: Cargo.toml  README.md
crates/plasm-mock/src/: error.rs  handlers.rs  lib.rs  server.rs  store.rs
crates/plasm-observability-contracts/: Cargo.toml
crates/plasm-observability-contracts/src/: model.rs  run_artifact.rs
crates/plasm-otel/: Cargo.toml  README.md
crates/plasm-otel/src/: lib.rs  trace_context.rs  tui_capture.rs
crates/plasm-plugin-abi/: Cargo.toml  README.md
crates/plasm-plugin-abi/src/: lib.rs
crates/plasm-plugin-host/: Cargo.toml  README.md
crates/plasm-plugin-host/src/: error.rs  ffi.rs  lib.rs  plugin_metadata.rs
crates/plasm-plugin-stub/: Cargo.toml  README.md  build.rs
crates/plasm-plugin-stub/src/: lib.rs
crates/plasm-repl/: Cargo.toml  README.md
crates/plasm-repl/src/: lib.rs  main.rs  repl.rs
crates/plasm-runtime/: Cargo.toml  README.md
crates/plasm-runtime/src/: api_error_detail.rs  auth.rs  auth_resolution.rs  cache.rs  error.rs  evm.rs  execution.rs  hosted_oauth_kv.rs  http_trace.rs  http_transport.rs  invoke_preflight.rs  lib.rs  mockserver.rs  oauth_client.rs  oauth_token_debug.rs  preflight.rs  replay.rs  runtime_error_render.rs  runtime_metrics.rs  session_graph_cache.rs  spans.rs  view_execution.rs  view_template.rs  view_typestate.rs
crates/plasm-sdk-transport/: Cargo.toml  README.md
crates/plasm-sdk-transport/src/: lib.rs
crates/plasm-server/: Cargo.toml  README.md
crates/plasm-server-pty-tests/: Cargo.toml
crates/plasm-server-pty-tests/tests/: tui_pty_quit_smoke.rs
crates/plasm-server/src/: appliance_admin_bridge.rs  appliance_log.rs  appliance_mcp_admin.rs  appliance_mode.rs  appliance_oauth_admin.rs  boot.rs  main.rs  mcp_cli.rs  oauth_cli.rs  oauth_upsert_wizard.rs  serve_ui_mode.rs  stderr_log.rs
crates/plasm-server/tests/: appliance_boot_support.rs  appliance_headless_boot.rs  tui_feature_inventory.md  tui_pty_integration.rs
crates/plasm-trace/: Cargo.toml
crates/plasm-trace-sink/: Cargo.toml  README.md
(+983 files in other folders)
