[package]
name = "plasm-compile"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[features]
default = []
evm = ["plasm-cml/evm"]

[dependencies]
plasm-core = { path = "../plasm-core" }
plasm-cml = { path = "../plasm-cml" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
ciborium = { workspace = true }
