[package]
name = "plasm-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rustc-hash = "2"
riptoken = "0.3.0"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
