[package]
name = "plasm-core"
version.workspace = true
edition.workspace = true
readme = "README.md"

[features]
default = ["ranked_capability_gate"]
# Non-read capabilities also require membership in an optional sorted capability-name list when that list is non-empty.
ranked_capability_gate = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rustc-hash = "2"
riptoken = "0.3.0"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
