[package]
name = "plasm-discovery"
version.workspace = true
edition.workspace = true
readme = "README.md"
description = "Typed, graph-aware discovery with optional local fastembed recall"

[features]
default = []
local-embeddings = ["dep:fastembed"]

[dependencies]
plasm-core = { path = "../plasm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
fastembed = { workspace = true, optional = true }
indexmap = { workspace = true }
inflection = { workspace = true }
rayon = { workspace = true }
aho-corasick = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "index_build"
harness = false
