[package]
name = "plasm-mock"
version.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
plasm-core = { path = "../plasm-core" }
plasm-compile = { path = "../plasm-compile" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap = { workspace = true }