[package]
name = "plasm-observability-contracts"
version.workspace = true
edition.workspace = true
description = "Shared serde/wire types for Plasm audit, trace ingest, and run artifact identity (OSS boundary)"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
