[package]
name = "plasm-otel"
version = "0.1.0"
edition = "2021"
description = "Shared OpenTelemetry OTLP bootstrap (traces, metrics, logs) from standard OTEL_* env vars"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-opentelemetry = { workspace = true }
