[package]
name = "plasm-plugin-abi"
version = "0.1.0"
edition = "2021"
description = "Stable wire format and C ABI contract for Plasm compile-only backend plugins"
readme = "README.md"

[dependencies]
plasm-core = { path = "../plasm-core" }
plasm-compile = { path = "../plasm-compile", features = ["evm"] }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
