[package]
name = "plasm-plugin-host"
version = "0.1.0"
edition = "2021"
description = "Load Plasm compile plugins (cdylib) and expose host-native compile closures"
readme = "README.md"

[dependencies]
plasm-plugin-abi = { path = "../plasm-plugin-abi" }
plasm-compile = { path = "../plasm-compile", features = ["evm"] }
plasm-core = { path = "../plasm-core" }
indexmap = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
plasm-plugin-stub = { path = "../plasm-plugin-stub" }
