[package]
name = "plasm-plugin-stub"
version = "0.1.0"
edition = "2021"
description = "Reference cdylib implementing plasm-plugin-abi (delegates to plasm-compile)"
readme = "README.md"

[lib]
name = "plasm_plugin_stub"
# rlib is built when dependents compile tests so `target/debug/libplasm_plugin_stub.{so,dylib,dll}` stays in sync with ABI changes; cdylib remains the dlopen artifact.
crate-type = ["cdylib", "rlib"]

[dependencies]
plasm-plugin-abi = { path = "../plasm-plugin-abi" }
plasm-compile = { path = "../plasm-compile", features = ["evm"] }
plasm-core = { path = "../plasm-core" }
serde_yaml = { workspace = true }

[build-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
