[package]
name = "plasm-repl"
version.workspace = true
edition.workspace = true
description = "Interactive Plasm REPL (path expressions + optional BAML/LLM). Depends on plasm-eval; not required for MCP."
readme = "README.md"

[features]
default = []
evm = ["plasm/evm"]

[lib]
name = "plasm_repl"
path = "src/lib.rs"

[[bin]]
name = "plasm-repl"
path = "src/main.rs"

[dependencies]
plasm = { path = "../plasm" }
plasm-eval = { path = "../plasm-eval" }
plasm-core = { path = "../plasm-core" }
plasm-compile = { path = "../plasm-compile" }
plasm-runtime = { path = "../plasm-runtime" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
