[package]
name = "plasm-server"
version.workspace = true
edition.workspace = true
description = "Single-binary Plasm server (`plasm-server`): in-process plasm-mcp kernel + Ratatui control station"
publish = false

[features]
# Links pg-embed into this binary (large). Slim CI/tooling builds:
#   cargo build -p plasm-server --no-default-features
default = ["embedded_postgres"]
embedded_postgres = ["plasm/embedded_postgres"]
[[bin]]
name = "plasm-server"
path = "src/main.rs"

[[test]]
name = "appliance_headless_boot"
path = "tests/appliance_headless_boot.rs"

[dependencies]
plasm-agent-core = { path = "../plasm-agent-core", default-features = false }
plasm-otel = { path = "../plasm-otel" }
chrono = { workspace = true }
plasm = { path = "../plasm", default-features = false }
plasm-core = { path = "../plasm-core" }
plasm-runtime = { path = "../plasm-runtime" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
strip-ansi-escapes = { workspace = true }
crossbeam-channel = { workspace = true }
scopeguard = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
auth-framework = { workspace = true }
arboard = "3"

[dev-dependencies]
tempfile = { workspace = true }
