[package]
name = "plasm-trace-sink"
version = "0.1.0"
edition = "2021"
description = "Ingest Plasm audit/trace events and append to Iceberg (audit_events, trace_spans)"
readme = "README.md"

[[bin]]
name = "plasm-trace-sink"
path = "src/main.rs"

[dependencies]
# JanKaul iceberg-rust stack: SqlCatalog (Postgres) + DataFusion + Parquet on local FS.
anyhow = { workspace = true }
opentelemetry = { workspace = true }
plasm-otel = { path = "../plasm-otel" }
plasm-trace = { path = "../plasm-trace" }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
datafusion_iceberg = { workspace = true }
futures = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-sql-catalog = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }

[dev-dependencies]
tempfile = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tower = { workspace = true }
