[package]
name = "plasm-trace"
version.workspace = true
edition.workspace = true
description = "Canonical MCP / execute session trace segments, events, and totals"

[dependencies]
plasm-observability-contracts = { path = "../plasm-observability-contracts" }
plasm-runtime = { path = "../plasm-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
